[B]Version 1.1.19[/B]
hqporner - search fix