@@ -1,2 +1,4 @@
 [B]Version 1.1.19[/B]
 hqporner - search fix
+myfreecams - random error fix
+bongacams - fixed
